--- a/static/basic.css
+++ b/static/basic.css
@@ -8,6 +8,12 @@ h5 {
     /* Adjust the color to the shade of gray you like */
 }
 
+body,
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
