--- a/static/style.css
+++ b/static/style.css
@@ -53,7 +53,7 @@ h1 {
 
 .timeline {
     margin-top: 30px;
-    text-align: left;
+    text-align: justify;
 }
 
 .timeline-node {
@@ -88,8 +88,8 @@ h1 {
 .timeline-node img {
     max-width: 100%;
     /* height: auto;  */
-    margin-bottom: 10px;
-    margin-right: 20px;
+    margin-right: 5px;
+    margin-left: 15px;
     width: 100px;
     /* Define a specific width */
     height: 100px;
